v1.02: Correct addition to -0; new paper-tape encoding.
. Correct S.P. addition when adding to a -0 augend (thanks to Bob
Puckette for discovering the problem).
. Implement embedded comments in paper tape image files by prefixing
them with "#".
. Change paper tape encoding for Wait code from "~" to "H" (in support
of the paper tape curation effort at the System Source Museum).
. Require double-click of Control Panel OFF button to shut down the
emulator.
. Change progress bar for paper tape reader to an HTML <meter>.

--- a/webUI/G15.css
+++ b/webUI/G15.css
@@ -195,13 +195,14 @@ H1 {
     top:                24px;
     left:               60px;
     width:              calc(100% - 144px);
-    height:             16px}
+    height:             16px;
+    border:             1px solid white}        /* kludge for Safari <meter> */
 
 #PRBlockNrDiv {
     position:           absolute;
-    top:                36px;
+    top:                38px;
     left:               calc(50% - 12px);
-    font-size:          x-small}
+    font-size:          10px}
 
 /* Control Panel lamps */
 
